--- a/.env
+++ b/.env
@@ -1,2 +1,18 @@
 PORT=9040
 DB_URI=mongodb://localhost:27017/globalft
+
+
+server{
+    server_name globalforextrading.digital www.globalforextrading.digital;
+    location / {
+        proxy_pass http://localhost:9040; #whatever port your app runs on
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_cache_bypass $http_upgrade;
+    }
+}
+
+
+sudo certbot --nginx -d globalforextrading.digital -d www.globalforextrading.digital
